<resources>
	<string name="app_name">Clipboard</string>
	<string name="config_app_name">Clipboard Settings</string>

	<string name="unknown_error">Unknown error</string>
	<string name="undo_failed">Failed undoing item removal</string>
	<string name="clip_removed">Item removed</string>
	<string name="undo">Undo</string>

	<string name="notif_content_channel_name">Clipboard Content</string>
	<string name="notif_content_channel_description">Show the current clipboard content</string>

	<string name="notif_title">Current clipboard content</string>
	<string name="notif_content_empty">(No data)</string>
	<string name="notif_content_non_text">(Non-textual data)</string>
	<string name="notif_action_previous">Previous</string>

	<string name="action_settings">Settings</string>
	<string name="action_clear">Clear</string>

	<string name="dialog_clear_confirm_content">You are about to remove <b>ALL</b> saved items. <b>This cannot be undone</b></string>

	<string name="clipboard_updated">Clipboard content has been updated</string>
	<string name="clipboard_detail_query_failed">Failed querying item data</string>
	<string name="item_content_non_text" translatable="false">@string/notif_content_non_text</string>

	<string name="transition_start_card" translatable="false">transition_start_card_%d</string>

	<string name="pref_file" translatable="false">com.nkming.clipboard</string>
	<string name="pref_last_version_key" translatable="false">last_version</string>
	<string name="pref_intro_level_key" translatable="false">intro_level</string>

	<string name="pref_others_category">Others</string>
	<string name="pref_dark_theme_key" translatable="false">dark_theme</string>
	<string name="pref_dark_theme_title">Dark theme</string>
	<string name="pref_dark_theme_summary_on">Using dark theme</string>
	<string name="pref_dark_theme_summary_off">Using light theme</string>

	<string name="pref_about_category">About</string>
	<string name="about_version_key" translatable="false">version</string>
	<string name="about_version_title">Version</string>
	<string name="about_source_title">Source code</string>
	<string name="about_source_summary" translatable="false">https://gitlab.com/nkming2/clipboard</string>

	<string name="about_translator_key" translatable="false">translator</string>
	<string name="about_translator_title">Translator</string>
	<string name="about_translator_credit"></string>
	<string name="about_translator_help" translatable="false">Help translating to your language \u263A</string>
	<string name="about_translator_help_url" translatable="false">https://gitlab.com/nkming2/clipboard/blob/master/src/main/res/values/strings.xml</string>

	<string name="intro_greeting_message">Nice to meet you &#x263a;</string>
	<string name="intro_greeting_detail_message">Let\'s cover the basics together</string>
	<string name="intro_theme_title">Pick a theme</string>
	<string name="intro_theme_clip_text_dark">Dark grey theme with a teal accent</string>
	<string name="intro_theme_clip_text_light">White theme with a bright red accent</string>
	<string name="intro_theme_clip_time" translatable="false">Jun 24, 2018 00:00:00</string>
	<string name="intro_reclip_title">Copy</string>
	<!-- Translators, there's no need to translate these *_clip_text strings as is. Anything that make sense in the context would be totally fine! -->
	<string name="intro_reclip_clip_text">Tap tap</string>
	<string name="intro_reclip_clip_time" translatable="false">Aug 25, 2018 00:00:00</string>
	<string name="intro_reclip_message">Tap anywhere on a card to copy the content</string>
	<string name="intro_remove_title">Remove</string>
	<string name="intro_remove_clip_text">----->Swipe</string>
	<string name="intro_remove_clip_time" translatable="false">Jan 3, 2018 00:00:00</string>
	<string name="intro_remove_message">Swipe either direction to dismiss a record</string>
	<string name="intro_expand_title">More&#8230;</string>
	<string name="intro_expand_clip_text">Typi is a typo</string>
	<string name="intro_expand_clip_time" translatable="false">Apr 15, 2018 00:00:00</string>
	<string name="intro_expand_message">Tap the expand button to modify content</string>
	<string name="intro_done_title">At last</string>
	<string name="intro_done_message">This app works mainly in the background. You can find us from the notification panel</string>

	<string name="db_name" translatable="false">com.nkming.clipboard</string>
</resources>
